<resources>
    <string name="app_name">술케줄</string>
    <string name="past">과거</string>
    <string name="today">오늘</string>
    <string name="traffic">건강 신호등</string>

    <string name="more_sul">더 보기</string>
    <string name="more_blank">입력란 추가</string>
    <string name="add_sul">새로운 주류 추가</string>

    <string name="edit">편집</string>
    <string name="delete">삭제</string>

    <string name="past_left">최근 14일</string>
    <string name="past_right">이번 달</string>

    <string name="back_home">모든 주류</string>
    <string name="back_all_sul">주류 관리</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="settings">설정</string>
    <string name="eula">오픈소스 라이센스</string>
    <string name="github_repository">Github repository</string>
    <string name="dataprocess">개인정보처리방침</string>
    <string name="suggestion2">기능 건의</string>
    <string name="suggestion1">버그 신고</string>
    <string name="show_ad">광고 표시</string>
    <string name="notification_setting">알림 설정</string>
    <string name="smart_tip">스마트 팁</string>

</resources>
