<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".TodayFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back" />

            <Space
                android:layout_width="9dp"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:text="@string/settings"
                android:textColor="@color/textWhite"
                android:textSize="@dimen/h4"
                android:textStyle="bold" />
        </LinearLayout>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/back_text_button"
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0"
                    android:src="@drawable/ic_back" />

                <Space
                    android:layout_width="9dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="4dp"
                    android:text="@string/settings"
                    android:textColor="#00000000"
                    android:textSize="@dimen/h4"
                    android:textStyle="bold" />
            </LinearLayout>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:backgroundTint="@color/colorPrimary"
                android:layout_marginBottom="12dp"
                android:paddingTop="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="3dp" />

                    <RelativeLayout
                        android:id="@+id/setting_item1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center|left">
                        <TextView
                            android:id="@+id/setting_item1_text"
                            android:layout_width="wrap_content"
                            android:layout_height="50dp"
                            android:text="@string/smart_tip"
                            android:textColor="@color/textWhite"
                            android:textSize="@dimen/h4"
                            android:maxLines="2"
                            android:gravity="center|left"
                            android:paddingLeft="16dp"
                            android:paddingRight="6dp" />
                        <ImageView
                            android:id="@+id/setting_item1_help"
                            android:layout_toRightOf="@id/setting_item1_text"
                            android:layout_centerVertical="true"
                            android:layout_width="wrap_content"
                            android:padding="4dp"
                            android:src="@drawable/ic_help_outline_black_24dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"/>
                        <Switch
                            android:id="@+id/setting_item1_switch"
                            android:foregroundTint="@color/colorAccent"
                            android:layout_alignParentRight="true"
                            android:layout_marginRight="14dp"
                            android:paddingRight="10dp"
                            android:paddingLeft="10dp"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            android:layout_centerVertical="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/setting_item2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center|left">
                        <TextView
                            android:id="@+id/setting_item2_text"
                            android:layout_width="wrap_content"
                            android:layout_height="50dp"
                            android:text="@string/notification_setting"
                            android:textColor="@color/textWhite"
                            android:textSize="@dimen/h4"
                            android:maxLines="2"
                            android:gravity="center|left"
                            android:paddingLeft="16dp"
                            android:paddingRight="6dp" />
                        <ImageView
                            android:id="@+id/setting_item2_help"
                            android:layout_toRightOf="@id/setting_item2_text"
                            android:layout_centerVertical="true"
                            android:layout_width="wrap_content"
                            android:padding="4dp"
                            android:src="@drawable/ic_help_outline_black_24dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"/>
                        <Switch
                            android:id="@+id/setting_item2_switch"
                            android:foregroundTint="@color/colorAccent"
                            android:layout_alignParentRight="true"
                            android:layout_marginRight="14dp"
                            android:paddingRight="10dp"
                            android:paddingLeft="10dp"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            android:layout_centerVertical="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </RelativeLayout>
                    <RelativeLayout
                        android:id="@+id/setting_item3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center|left">
                        <TextView
                            android:id="@+id/setting_item3_text"
                            android:layout_width="wrap_content"
                            android:layout_height="50dp"
                            android:text="@string/show_ad"
                            android:textColor="@color/textWhite"
                            android:textSize="@dimen/h4"
                            android:maxLines="2"
                            android:gravity="center|left"
                            android:paddingLeft="16dp"
                            android:paddingRight="6dp" />
                        <ImageView
                            android:id="@+id/setting_item3_help"
                            android:layout_toRightOf="@id/setting_item3_text"
                            android:layout_centerVertical="true"
                            android:layout_width="wrap_content"
                            android:padding="4dp"
                            android:src="@drawable/ic_help_outline_black_24dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"/>
                        <Switch
                            android:id="@+id/setting_item3_switch"
                            android:foregroundTint="@color/colorAccent"
                            android:layout_alignParentRight="true"
                            android:layout_marginRight="14dp"
                            android:paddingRight="10dp"
                            android:paddingLeft="10dp"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            android:layout_centerVertical="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </RelativeLayout>

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="5dp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:backgroundTint="@color/colorPrimary"
                android:layout_marginBottom="12dp"
                android:paddingTop="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="3dp" />

                    <TextView
                        android:id="@+id/setting_item4"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:text="@string/suggestion1"
                        android:textColor="@color/textWhite"
                        android:textSize="@dimen/h4"
                        android:maxLines="2"
                        android:gravity="center|left"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp" />
                    <TextView
                        android:id="@+id/setting_item5"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:text="@string/suggestion2"
                        android:textColor="@color/textWhite"
                        android:textSize="@dimen/h4"
                        android:maxLines="2"
                        android:gravity="center|left"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="5dp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:backgroundTint="@color/colorPrimary"
                android:layout_marginBottom="12dp"
                android:paddingTop="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="3dp" />

                    <TextView
                        android:id="@+id/setting_item6"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:text="@string/eula"
                        android:textColor="@color/textWhite"
                        android:textSize="@dimen/h4"
                        android:maxLines="2"
                        android:gravity="center|left"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp" />
                    <TextView
                        android:id="@+id/setting_item7"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:text="@string/github_repository"
                        android:textColor="@color/textWhite"
                        android:textSize="@dimen/h4"
                        android:maxLines="2"
                        android:gravity="center|left"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp" />
                    <TextView
                        android:id="@+id/setting_item8"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:text="@string/dataprocess"
                        android:textColor="@color/textWhite"
                        android:textSize="@dimen/h4"
                        android:maxLines="2"
                        android:gravity="center|left"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="5dp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!--end space-->
            <androidx.legacy.widget.Space
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="@color/colorPrimaryDark" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>